pkg/i2gw/providers/nginx/fixtures/transportserver/output/nginx-ts-tcp-basic.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  creationTimestamp: null
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
  name: default-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: tcp-3306
    port: 3306
    protocol: TCP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  creationTimestamp: null
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-transportserver
    ingress2gateway.io/ts-name: mysql-proxy
  name: mysql-proxy-tcproute
  namespace: default
spec:
  parentRefs:
  - name: default-gateway
    sectionName: tcp-3306
  rules:
  - backendRefs:
    - group: core
      kind: Service
      name: mysql-service
      namespace: default
      port: 3306
status:
  parents: null
