pkg/i2gw/providers/nginx/fixtures/transportserver/output/nginx-ts-tls-termination.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  creationTimestamp: null
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-virtualserver
  name: default-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: tcp-8443-api-example-com
    port: 8443
    protocol: TCP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  creationTimestamp: null
  labels:
    app.kubernetes.io/managed-by: ingress2gateway
    ingress2gateway.io/source: nginx-transportserver
    ingress2gateway.io/ts-name: api-gateway
  name: api-gateway-tcproute
  namespace: default
spec:
  parentRefs:
  - name: default-gateway
    sectionName: tcp-8443-api-example-com
  rules:
  - backendRefs:
    - group: core
      kind: Service
      name: api-service
      namespace: default
      port: 8080
status:
  parents: null
